# dagster-cource

./: .gitignore  README.md  pyproject.toml
dagster_university/: pyproject.toml
dagster_university/dagster_university/: __init__.py
dagster_university/dagster_university/assets/: metrics.py  requests.py  trips.py
dagster_university/dagster_university/jobs/: __init__.py
dagster_university/dagster_university/partitions/: __init__.py
dagster_university/dagster_university/schedules/: __init__.py
dagster_university/dagster_university/sensors/: __init__.py
